Feat: add cardmarket search

--- a/app/globals.css
+++ b/app/globals.css
@@ -120,3 +120,7 @@
     @apply bg-background text-foreground;
   }
 }
+
+@import "swiper/css";
+@import "swiper/css/free-mode";
+@import "swiper/css/pagination";
